test_suite/alan-2022-examples/failing/003480_mutation.alan
source b0S begin if 7 then relax elsif 16 then := end end
